--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                     <img src="img/r1.jpg" alt="">
                     <div class="textos">
                         <span id="ref1">ref:1</span>
-                        <p id="r1">Ropa para bebé recien nacido</p>
+                        <p id="r1">Ropa para recien nacido</p>
                     </div>
-                    <span id="precio1">$10.000</span> <br>
+                    <span id="precio1">$11.000</span> <br>
                     <button id="submit1">Comprar</button>
                 </div>
 
