--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Document</title>
+
+     <!-- para agregar la animacion -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- font awesome cdn link ICONOS DE HAMBURGUESA Y LA X  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -95,7 +99,7 @@
         <!--final slider-->
 
         <!--inicio items-->
-        <section class="items">
+        <section class="items" data-aos="flip-left">
             <div class="item-items">
                 <i class='bx bxs-truck'></i>
                 <div class="item-textos">
@@ -136,7 +140,7 @@
             <h2 class="heading"><span>Ropa para bebé</span></h2>
 
             <div class="contenedor-productos">
-                <div class="contenedor">
+                <div class="contenedor" data-aos="zoom-in" data-aos-duration="600">
                     <img src="img/r1.jpg" alt="">
                     <div class="textos">
                         <span id="ref1">ref:1</span>
@@ -146,7 +150,7 @@
                     <button id="submit1">Comprar</button>
                 </div>
 
-                <div class="contenedor">
+                <div class="contenedor" data-aos="zoom-in" >
                     <img src="img/r2.jpg" alt="">
                     <div class="textos">
                         <span id="ref2">ref:2</span>
@@ -156,7 +160,7 @@
                     <button id="submit2">Comprar</button>
                 </div>
 
-                <div class="contenedor">
+                <div class="contenedor" data-aos="zoom-in">
                     <img src="img/r3.jpg" alt="">
                     <div class="textos">
                         <span id="ref3">ref:3</span>
@@ -166,7 +170,7 @@
                     <button id="submit3">Comprar</button>
                 </div>
 
-                <div class="contenedor">
+                <div class="contenedor" data-aos="zoom-in">
                     <img src="img/r4.jpg" alt="">
                     <div class="textos">
                         <span id="ref4">ref:4</span>
@@ -176,7 +180,7 @@
                     <button id="submit4">Comprar</button>
                 </div>
 
-                <div class="contenedor">
+                <div class="contenedor" data-aos="zoom-in">
                     <img src="img/r5.jpg" alt="">
                     <div class="textos">
                         <span id="ref5">ref:5</span>
@@ -186,7 +190,7 @@
                     <button id="submit5">Comprar</button>
                 </div>
 
-                <div class="contenedor">
+                <div class="contenedor" data-aos="zoom-in">
                     <img src="img/r6.jpg" alt="">
                     <div class="textos">
                         <span id="ref6">ref:6</span>
@@ -199,7 +203,11 @@
         </section>
         <!--final productos-->
 
-
+        <!-- para agregar la animacion -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
         <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
         <script src="js/script.js"></script> 
         <script src="js/compras.js"></script>
